# python-ddd-example

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  app.py  container.py  docker-compose.yaml  elk.yaml  entrypoint.sh  filebeat.yml  ioc_container.py  pyproject.toml  pytest.ini  requirements.txt
application/: add_team.py  add_team_command.py  application_command.py  application_service.py  test_repository.py  use_case.py
application/add_player_to_team/: add_player_to_team.py  add_player_to_team_command.py
application/add_team/: add_team.py
application/get_team/: get_team.py  get_team_command.py  get_team_response.py
domain/: domain_entity.py  repository.py
domain/core/: aggregate_root.py  domain_entity.py  invalid_domain_entity_error.py
domain/player/: invalid_player_error.py  player.py
domain/team/: invalid_team_error.py  team.py  team_created_event.py  team_modified_event.py  team_not_found_error.py  team_repository.py
infraestructure/: test_repository.py
infraestructure/bus/event/: fake_event_bus.py
infraestructure/persistence/: database_handler.py  database_parser.py
infraestructure/persistence/mongo/: mongo_handler.py  mongo_team_parser.py  mongo_team_repository.py
infraestructure/rest/: error_handler.py  team_controller.py
scripts/: lint.py  typecheck.py
src/: container.py
src/application/: application_command.py  application_response.py  application_service.py
src/application/add_player_to_team/: add_player_to_team.py  add_player_to_team_command.py
src/application/add_team/: add_team.py  add_team_command.py
src/application/create_team/: create_team.py  create_team_command.py
src/application/get_team/: get_team.py  get_team_command.py  get_team_response.py
src/application/sign_player/: sign_player.py  sign_player_command.py
src/domain/: example.py  types.py
src/domain/core/: aggregate_root.py  applicaton_error.py  domain_entity.py  invalid_domain_entity_error.py
src/domain/player/: invalid_player_error.py  player.py
src/domain/team/: invalid_team_error.py  team.py  team_created_event.py  team_modified_event.py  team_not_found_error.py  team_repository.py
src/infraestructure/config/: config.py
src/infraestructure/persistence/: database_handler.py  database_parser.py
src/infraestructure/rest/: base_controller.py  (+2 more)
(+27 files in other folders)
